--- a/package-index/index.html
+++ b/package-index/index.html
@@ -9,6 +9,14 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221202.675/torch_mlir-20221202.675-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221202.675-cp37-cp37m-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221202.675/torch-1.14.0.dev20221201-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221201-cp310-none-macosx_10_9_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221202.675/torch_mlir-20221202.675-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221202.675-cp310-cp310-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221202.69/torch-1.14.0.dev20221122%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221122+cpu-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221202.69/torch_mlir-20221202.69-cp310-cp310-win_amd64.whl'>torch_mlir-20221202.69-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221202.69/torch-1.14.0.dev20221122%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221122+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221202.69/torch-1.14.0.dev20221122%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221122+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221202.69/torch_mlir-20221202.69-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221202.69-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221202.69/torch_mlir-20221202.69-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221202.69-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221202.69/torch-1.14.0.dev20221122-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221122-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221202.69/torch_mlir-20221202.69-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221202.69-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221201.674/torch-1.14.0.dev20221130%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221130+cpu-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221201.674/torch_mlir-20221201.674-cp310-cp310-win_amd64.whl'>torch_mlir-20221201.674-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221201.674/torch-1.14.0.dev20221130%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221130+cpu-cp310-cp310-linux_x86_64.whl</a><br />
@@ -220,11 +228,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221107.650/torch_mlir-20221107.650-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221107.650-cp37-cp37m-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221107.650/torch-1.14.0.dev20221105-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221105-cp310-none-macosx_10_9_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221107.650/torch_mlir-20221107.650-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221107.650-cp310-cp310-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221106.649/torch-1.14.0.dev20221104%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221104+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221106.649/torch-1.14.0.dev20221104%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221104+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221106.649/torch_mlir-20221106.649-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221106.649-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221106.649/torch_mlir-20221106.649-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221106.649-cp37-cp37m-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221106.649/torch-1.14.0.dev20221104-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221104-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221106.649/torch_mlir-20221106.649-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221106.649-cp310-cp310-macosx_11_0_universal2.whl</a><br />
   </body>
 </html>
