--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221204.677/torch-1.14.0.dev20221203%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221203+cpu-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221204.677/torch_mlir-20221204.677-cp310-cp310-win_amd64.whl'>torch_mlir-20221204.677-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221204.677/torch-1.14.0.dev20221203%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221203+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221204.677/torch-1.14.0.dev20221203%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221203+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221204.677/torch_mlir-20221204.677-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221204.677-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221204.677/torch_mlir-20221204.677-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221204.677-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221204.677/torch-1.14.0.dev20221203-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221203-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221204.677/torch_mlir-20221204.677-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221204.677-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221203.676/torch-1.14.0.dev20221202%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221202+cpu-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221203.676/torch_mlir-20221203.676-cp310-cp310-win_amd64.whl'>torch_mlir-20221203.676-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221203.676/torch-1.14.0.dev20221202-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221202-cp310-none-macosx_10_9_x86_64.whl</a><br />
@@ -226,7 +234,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221109.652/torch_mlir-20221109.652-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221109.652-cp37-cp37m-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221109.652/torch-1.14.0.dev20221105-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221105-cp310-none-macosx_10_9_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221109.652/torch_mlir-20221109.652-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221109.652-cp310-cp310-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221108.651/torch-1.14.0.dev20221105%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221105+cpu-cp310-cp310-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221108.651/torch_mlir-20221108.651-cp310-cp310-win_amd64.whl'>torch_mlir-20221108.651-cp310-cp310-win_amd64.whl</a><br />
   </body>
 </html>
