--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221204.70/torch-1.14.0.dev20221122%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221122+cpu-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221204.70/torch_mlir-20221204.70-cp310-cp310-win_amd64.whl'>torch_mlir-20221204.70-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221204.70/torch-1.14.0.dev20221122-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221122-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221204.70/torch_mlir-20221204.70-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221204.70-cp310-cp310-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221204.70/torch-1.14.0.dev20221122%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221122+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221204.70/torch-1.14.0.dev20221122%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221122+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221204.70/torch_mlir-20221204.70-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221204.70-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221204.70/torch_mlir-20221204.70-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221204.70-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221204.677/torch-1.14.0.dev20221203%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221203+cpu-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221204.677/torch_mlir-20221204.677-cp310-cp310-win_amd64.whl'>torch_mlir-20221204.677-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221204.677/torch-1.14.0.dev20221203%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221203+cpu-cp310-cp310-linux_x86_64.whl</a><br />
@@ -226,13 +234,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221110.653/torch-1.14.0.dev20221109%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221109+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221110.653/torch_mlir-20221110.653-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221110.653-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221110.653/torch_mlir-20221110.653-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221110.653-cp37-cp37m-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221109.652/torch-1.14.0.dev20221105%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221105+cpu-cp310-cp310-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221109.652/torch_mlir-20221109.652-cp310-cp310-win_amd64.whl'>torch_mlir-20221109.652-cp310-cp310-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221109.652/torch-1.14.0.dev20221105%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221105+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221109.652/torch-1.14.0.dev20221105%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221105+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221109.652/torch_mlir-20221109.652-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221109.652-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221109.652/torch_mlir-20221109.652-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221109.652-cp37-cp37m-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221109.652/torch-1.14.0.dev20221105-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221105-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221109.652/torch_mlir-20221109.652-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221109.652-cp310-cp310-macosx_11_0_universal2.whl</a><br />
   </body>
 </html>
