--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221206.71/torch-1.14.0.dev20221122%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221122+cpu-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221206.71/torch_mlir-20221206.71-cp310-cp310-win_amd64.whl'>torch_mlir-20221206.71-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221206.71/torch-1.14.0.dev20221122%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221122+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221206.71/torch-1.14.0.dev20221122%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221122+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221206.71/torch_mlir-20221206.71-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221206.71-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221206.71/torch_mlir-20221206.71-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221206.71-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221206.71/torch-1.14.0.dev20221122-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221122-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221206.71/torch_mlir-20221206.71-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221206.71-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221206.679/torch-1.14.0.dev20221205%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221205+cpu-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221206.679/torch_mlir-20221206.679-cp310-cp310-win_amd64.whl'>torch_mlir-20221206.679-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221206.679/torch-1.14.0.dev20221205-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221205-cp310-none-macosx_10_9_x86_64.whl</a><br />
@@ -226,13 +234,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221113.656/torch_mlir-20221113.656-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221113.656-cp37-cp37m-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221113.656/torch-1.14.0.dev20221109-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221109-cp310-none-macosx_10_9_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221113.656/torch_mlir-20221113.656-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221113.656-cp310-cp310-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221112.655/torch-1.14.0.dev20221109%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221109+cpu-cp310-cp310-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221112.655/torch_mlir-20221112.655-cp310-cp310-win_amd64.whl'>torch_mlir-20221112.655-cp310-cp310-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221112.655/torch-1.14.0.dev20221109-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221109-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221112.655/torch_mlir-20221112.655-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221112.655-cp310-cp310-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221112.655/torch-1.14.0.dev20221109%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221109+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221112.655/torch-1.14.0.dev20221109%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221109+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221112.655/torch_mlir-20221112.655-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221112.655-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221112.655/torch_mlir-20221112.655-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221112.655-cp37-cp37m-linux_x86_64.whl</a><br />
   </body>
 </html>
