--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221211.684/torch-1.14.0.dev20221205%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221205+cpu-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221211.684/torch_mlir-20221211.684-cp310-cp310-win_amd64.whl'>torch_mlir-20221211.684-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221211.684/torch-1.14.0.dev20221205%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221205+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221211.684/torch-1.14.0.dev20221205%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221205+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221211.684/torch_mlir-20221211.684-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221211.684-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221211.684/torch_mlir-20221211.684-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir-20221211.684-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221211.684/torch-1.14.0.dev20221205-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221205-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221211.684/torch_mlir-20221211.684-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221211.684-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221210.683/torch-1.14.0.dev20221205%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221205+cpu-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221210.683/torch_mlir-20221210.683-cp310-cp310-win_amd64.whl'>torch_mlir-20221210.683-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221210.683/torch-1.14.0.dev20221205-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221205-cp310-none-macosx_10_9_x86_64.whl</a><br />
@@ -226,13 +234,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221118.661/torch-1.14.0.dev20221114%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221114+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221118.661/torch_mlir-20221118.661-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221118.661-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221118.661/torch_mlir-20221118.661-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221118.661-cp37-cp37m-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221117.660/torch-1.14.0.dev20221114%2Bcpu-cp310-cp310-win_amd64.whl'>torch-1.14.0.dev20221114+cpu-cp310-cp310-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221117.660/torch_mlir-20221117.660-cp310-cp310-win_amd64.whl'>torch_mlir-20221117.660-cp310-cp310-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221117.660/torch-1.14.0.dev20221114%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-1.14.0.dev20221114+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221117.660/torch-1.14.0.dev20221114%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-1.14.0.dev20221114+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221117.660/torch_mlir-20221117.660-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221117.660-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221117.660/torch_mlir-20221117.660-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221117.660-cp37-cp37m-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221117.660/torch-1.14.0.dev20221114-cp310-none-macosx_10_9_x86_64.whl'>torch-1.14.0.dev20221114-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221117.660/torch_mlir-20221117.660-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221117.660-cp310-cp310-macosx_11_0_universal2.whl</a><br />
   </body>
 </html>
