--- a/package-index/index.html
+++ b/package-index/index.html
@@ -3,6 +3,10 @@
   <body>
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221214.687/torch-2.0.0.dev20221213%2Bcpu-cp310-cp310-win_amd64.whl'>torch-2.0.0.dev20221213+cpu-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221214.687/torch_mlir-20221214.687-cp310-cp310-win_amd64.whl'>torch_mlir-20221214.687-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221214.687/torch-2.0.0.dev20221213%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.0.0.dev20221213+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221214.687/torch-2.0.0.dev20221213%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-2.0.0.dev20221213+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221214.687/torch_mlir-20221214.687-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221214.687-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221214.687/torch_mlir-20221214.687-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221214.687-cp37-cp37m-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221214.73/torch-2.0.0.dev20221213%2Bcpu-cp310-cp310-win_amd64.whl'>torch-2.0.0.dev20221213+cpu-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221214.73/torch_mlir-20221214.73-cp310-cp310-win_amd64.whl'>torch_mlir-20221214.73-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20221214.73/torch-2.0.0.dev20221213-cp310-none-macosx_10_9_x86_64.whl'>torch-2.0.0.dev20221213-cp310-none-macosx_10_9_x86_64.whl</a><br />
