--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230121.725/torch-2.0.0.dev20230120%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.0.0.dev20230120+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230121.725/torch-2.0.0.dev20230120%2Bcpu-cp310-cp310-win_amd64.whl'>torch-2.0.0.dev20230120+cpu-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230121.725/torch-2.0.0.dev20230120-cp310-none-macosx_10_9_x86_64.whl'>torch-2.0.0.dev20230120-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230121.725/torch_mlir-20230121.725-cp310-cp310-linux_x86_64.whl'>torch_mlir-20230121.725-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230121.725/torch_mlir-20230121.725-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20230121.725-cp310-cp310-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230121.725/torch_mlir-20230121.725-cp310-cp310-win_amd64.whl'>torch_mlir-20230121.725-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230120.724/torch-2.0.0.dev20230119%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.0.0.dev20230119+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230120.724/torch-2.0.0.dev20230119%2Bcpu-cp310-cp310-win_amd64.whl'>torch-2.0.0.dev20230119+cpu-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230120.724/torch-2.0.0.dev20230119-cp310-none-macosx_10_9_x86_64.whl'>torch-2.0.0.dev20230119-cp310-none-macosx_10_9_x86_64.whl</a><br />
@@ -183,11 +189,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221215.688/torch_mlir-20221215.688-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20221215.688-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221215.688/torch_mlir-20221215.688-cp310-cp310-win_amd64.whl'>torch_mlir-20221215.688-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221215.688/torch_mlir-20221215.688-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221215.688-cp37-cp37m-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221214.687/torch-2.0.0.dev20221213%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.0.0.dev20221213+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221214.687/torch-2.0.0.dev20221213%2Bcpu-cp310-cp310-win_amd64.whl'>torch-2.0.0.dev20221213+cpu-cp310-cp310-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221214.687/torch-2.0.0.dev20221213%2Bcpu-cp37-cp37m-linux_x86_64.whl'>torch-2.0.0.dev20221213+cpu-cp37-cp37m-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221214.687/torch_mlir-20221214.687-cp310-cp310-linux_x86_64.whl'>torch_mlir-20221214.687-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221214.687/torch_mlir-20221214.687-cp310-cp310-win_amd64.whl'>torch_mlir-20221214.687-cp310-cp310-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20221214.687/torch_mlir-20221214.687-cp37-cp37m-linux_x86_64.whl'>torch_mlir-20221214.687-cp37-cp37m-linux_x86_64.whl</a><br />
   </body>
 </html>
