--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230202.737/torch-2.0.0.dev20230131%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.0.0.dev20230131+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230202.737/torch-2.0.0.dev20230131%2Bcpu-cp310-cp310-win_amd64.whl'>torch-2.0.0.dev20230131+cpu-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230202.737/torch-2.0.0.dev20230131%2Bcpu-cp38-cp38-linux_x86_64.whl'>torch-2.0.0.dev20230131+cpu-cp38-cp38-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230202.737/torch-2.0.0.dev20230131-cp310-none-macosx_10_9_x86_64.whl'>torch-2.0.0.dev20230131-cp310-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230202.737/torch_mlir-20230202.737-cp310-cp310-linux_x86_64.whl'>torch_mlir-20230202.737-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230202.737/torch_mlir-20230202.737-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20230202.737-cp310-cp310-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230202.737/torch_mlir-20230202.737-cp310-cp310-win_amd64.whl'>torch_mlir-20230202.737-cp310-cp310-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230202.737/torch_mlir-20230202.737-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230202.737-cp38-cp38-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230201.736/torch-2.0.0.dev20230131%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.0.0.dev20230131+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230201.736/torch-2.0.0.dev20230131%2Bcpu-cp310-cp310-win_amd64.whl'>torch-2.0.0.dev20230131+cpu-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230201.736/torch-2.0.0.dev20230131%2Bcpu-cp38-cp38-linux_x86_64.whl'>torch-2.0.0.dev20230131+cpu-cp38-cp38-linux_x86_64.whl</a><br />
@@ -191,7 +199,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230104.708/torch_mlir-20230104.708-cp310-cp310-linux_x86_64.whl'>torch_mlir-20230104.708-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230104.708/torch_mlir-20230104.708-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20230104.708-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230104.708/torch_mlir-20230104.708-cp310-cp310-win_amd64.whl'>torch_mlir-20230104.708-cp310-cp310-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230104.77/torch-2.0.0.dev20230103%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.0.0.dev20230103+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230104.77/torch_mlir-20230104.77-cp310-cp310-linux_x86_64.whl'>torch_mlir-20230104.77-cp310-cp310-linux_x86_64.whl</a><br />
   </body>
 </html>
