--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230227.762/torch-2.0.0.dev20230220%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.0.0.dev20230220+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230227.762/torch-2.0.0.dev20230220%2Bcpu-cp311-cp311-linux_x86_64.whl'>torch-2.0.0.dev20230220+cpu-cp311-cp311-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230227.762/torch-2.0.0.dev20230220%2Bcpu-cp311-cp311-win_amd64.whl'>torch-2.0.0.dev20230220+cpu-cp311-cp311-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230227.762/torch-2.0.0.dev20230220%2Bcpu-cp38-cp38-linux_x86_64.whl'>torch-2.0.0.dev20230220+cpu-cp38-cp38-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230227.762/torch-2.0.0.dev20230220-cp311-none-macosx_10_9_x86_64.whl'>torch-2.0.0.dev20230220-cp311-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230227.762/torch_mlir-20230227.762-cp310-cp310-linux_x86_64.whl'>torch_mlir-20230227.762-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230227.762/torch_mlir-20230227.762-cp311-cp311-linux_x86_64.whl'>torch_mlir-20230227.762-cp311-cp311-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230227.762/torch_mlir-20230227.762-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir-20230227.762-cp311-cp311-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230227.762/torch_mlir-20230227.762-cp311-cp311-win_amd64.whl'>torch_mlir-20230227.762-cp311-cp311-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230227.762/torch_mlir-20230227.762-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230227.762-cp38-cp38-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230226.761/torch-2.0.0.dev20230220%2Bcpu-cp311-cp311-win_amd64.whl'>torch-2.0.0.dev20230220+cpu-cp311-cp311-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230226.761/torch-2.0.0.dev20230220-cp311-none-macosx_10_9_x86_64.whl'>torch-2.0.0.dev20230220-cp311-none-macosx_10_9_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230226.761/torch_mlir-20230226.761-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir-20230226.761-cp311-cp311-macosx_11_0_universal2.whl</a><br />
