--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230304.83/torch-2.1.0.dev20230303%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.1.0.dev20230303+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230304.83/torch-2.1.0.dev20230303%2Bcpu-cp311-cp311-linux_x86_64.whl'>torch-2.1.0.dev20230303+cpu-cp311-cp311-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230304.83/torch-2.1.0.dev20230303%2Bcpu-cp311-cp311-win_amd64.whl'>torch-2.1.0.dev20230303+cpu-cp311-cp311-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230304.83/torch-2.1.0.dev20230303%2Bcpu-cp38-cp38-linux_x86_64.whl'>torch-2.1.0.dev20230303+cpu-cp38-cp38-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230304.83/torch-2.1.0.dev20230303-cp311-none-macosx_10_9_x86_64.whl'>torch-2.1.0.dev20230303-cp311-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230304.83/torch_mlir-20230304.83-cp310-cp310-linux_x86_64.whl'>torch_mlir-20230304.83-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230304.83/torch_mlir-20230304.83-cp311-cp311-linux_x86_64.whl'>torch_mlir-20230304.83-cp311-cp311-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230304.83/torch_mlir-20230304.83-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir-20230304.83-cp311-cp311-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230304.83/torch_mlir-20230304.83-cp311-cp311-win_amd64.whl'>torch_mlir-20230304.83-cp311-cp311-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230304.83/torch_mlir-20230304.83-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230304.83-cp38-cp38-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230304.83/torch_mlir_no_jit_importer-20230304.83-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir_no_jit_importer-20230304.83-cp311-cp311-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230303.766/torch-2.1.0.dev20230302%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.1.0.dev20230302+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230303.766/torch-2.1.0.dev20230302%2Bcpu-cp311-cp311-linux_x86_64.whl'>torch-2.1.0.dev20230302+cpu-cp311-cp311-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230303.766/torch-2.1.0.dev20230302%2Bcpu-cp311-cp311-win_amd64.whl'>torch-2.1.0.dev20230302+cpu-cp311-cp311-win_amd64.whl</a><br />
@@ -247,9 +258,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230206.741/torch_mlir-20230206.741-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20230206.741-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230206.741/torch_mlir-20230206.741-cp310-cp310-win_amd64.whl'>torch_mlir-20230206.741-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230206.741/torch_mlir-20230206.741-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230206.741-cp38-cp38-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230204.79/torch-2.0.0.dev20230202%2Bcpu-cp310-cp310-win_amd64.whl'>torch-2.0.0.dev20230202+cpu-cp310-cp310-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230204.79/torch-2.0.0.dev20230202-cp310-none-macosx_10_9_x86_64.whl'>torch-2.0.0.dev20230202-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230204.79/torch_mlir-20230204.79-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20230204.79-cp310-cp310-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230204.79/torch_mlir-20230204.79-cp310-cp310-win_amd64.whl'>torch_mlir-20230204.79-cp310-cp310-win_amd64.whl</a><br />
   </body>
 </html>
