--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230305.87/torch-2.1.0.dev20230303%2Bcpu-cp311-cp311-win_amd64.whl'>torch-2.1.0.dev20230303+cpu-cp311-cp311-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230305.87/torch_mlir-20230305.87-cp311-cp311-win_amd64.whl'>torch_mlir-20230305.87-cp311-cp311-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230305.87/torch_mlir_no_jit-20230305.87-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir_no_jit-20230305.87-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230305.87/torch_mlir_no_jit-20230305.87-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir_no_jit-20230305.87-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230305.87/torch_mlir_no_jit-20230305.87-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir_no_jit-20230305.87-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230305.86/torch_mlir_no_jit-20230305.86-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir_no_jit-20230305.86-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230305.86/torch_mlir_no_jit-20230305.86-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir_no_jit-20230305.86-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230305.86/torch_mlir_no_jit-20230305.86-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir_no_jit-20230305.86-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230305.768/torch-2.1.0.dev20230304%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.1.0.dev20230304+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230305.768/torch-2.1.0.dev20230304%2Bcpu-cp311-cp311-linux_x86_64.whl'>torch-2.1.0.dev20230304+cpu-cp311-cp311-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230305.768/torch-2.1.0.dev20230304%2Bcpu-cp38-cp38-linux_x86_64.whl'>torch-2.1.0.dev20230304+cpu-cp38-cp38-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230305.768/torch_mlir-20230305.768-cp310-cp310-linux_x86_64.whl'>torch_mlir-20230305.768-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230305.768/torch_mlir-20230305.768-cp311-cp311-linux_x86_64.whl'>torch_mlir-20230305.768-cp311-cp311-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230305.768/torch_mlir-20230305.768-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230305.768-cp38-cp38-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230304.767/torch-2.1.0.dev20230303%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.1.0.dev20230303+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230304.767/torch-2.1.0.dev20230303%2Bcpu-cp311-cp311-linux_x86_64.whl'>torch-2.1.0.dev20230303+cpu-cp311-cp311-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230304.767/torch-2.1.0.dev20230303%2Bcpu-cp311-cp311-win_amd64.whl'>torch-2.1.0.dev20230303+cpu-cp311-cp311-win_amd64.whl</a><br />
@@ -239,21 +250,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230209.744/torch_mlir-20230209.744-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20230209.744-cp310-cp310-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230209.744/torch_mlir-20230209.744-cp310-cp310-win_amd64.whl'>torch_mlir-20230209.744-cp310-cp310-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230209.744/torch_mlir-20230209.744-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230209.744-cp38-cp38-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230208.743/torch-2.0.0.dev20230207%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.0.0.dev20230207+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230208.743/torch-2.0.0.dev20230207%2Bcpu-cp310-cp310-win_amd64.whl'>torch-2.0.0.dev20230207+cpu-cp310-cp310-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230208.743/torch-2.0.0.dev20230207%2Bcpu-cp38-cp38-linux_x86_64.whl'>torch-2.0.0.dev20230207+cpu-cp38-cp38-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230208.743/torch-2.0.0.dev20230207-cp310-none-macosx_10_9_x86_64.whl'>torch-2.0.0.dev20230207-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230208.743/torch_mlir-20230208.743-cp310-cp310-linux_x86_64.whl'>torch_mlir-20230208.743-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230208.743/torch_mlir-20230208.743-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20230208.743-cp310-cp310-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230208.743/torch_mlir-20230208.743-cp310-cp310-win_amd64.whl'>torch_mlir-20230208.743-cp310-cp310-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230208.743/torch_mlir-20230208.743-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230208.743-cp38-cp38-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230207.742/torch-2.0.0.dev20230206%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.0.0.dev20230206+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230207.742/torch-2.0.0.dev20230206%2Bcpu-cp310-cp310-win_amd64.whl'>torch-2.0.0.dev20230206+cpu-cp310-cp310-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230207.742/torch-2.0.0.dev20230206%2Bcpu-cp38-cp38-linux_x86_64.whl'>torch-2.0.0.dev20230206+cpu-cp38-cp38-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230207.742/torch-2.0.0.dev20230206-cp310-none-macosx_10_9_x86_64.whl'>torch-2.0.0.dev20230206-cp310-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230207.742/torch_mlir-20230207.742-cp310-cp310-linux_x86_64.whl'>torch_mlir-20230207.742-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230207.742/torch_mlir-20230207.742-cp310-cp310-macosx_11_0_universal2.whl'>torch_mlir-20230207.742-cp310-cp310-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230207.742/torch_mlir-20230207.742-cp310-cp310-win_amd64.whl'>torch_mlir-20230207.742-cp310-cp310-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230207.742/torch_mlir-20230207.742-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230207.742-cp38-cp38-linux_x86_64.whl</a><br />
   </body>
 </html>
